<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:text="@string/playlists"
        android:textColor="@color/playlists"
        android:textSize="32sp"
        android:gravity="center"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            style="@style/PlaylistView"
            android:text="@string/addPlaylist" />

        <Button
            style="@style/PlaylistView"
            android:text="@string/favouritePlaylist" />

        <Button
            style="@style/PlaylistView"
            android:text="@string/rockPlaylist" />

        <Button
            style="@style/PlaylistView"
            android:text="@string/folkPlaylist" />

        <Button
            style="@style/PlaylistView"
            android:text="@string/rapPlaylist" />
    </LinearLayout>

</LinearLayout>